added redux, not final

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource/gloria-hallelujah": "^5.2.8",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
+    "@reduxjs/toolkit": "^2.11.2",
     "@stomp/stompjs": "^7.3.0",
     "@tailwindcss/vite": "^4.1.18",
     "@types/three": "^0.182.0",
@@ -20,8 +21,10 @@
     "framer-motion": "^12.34.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.13.0",
     "react-toastify": "^11.0.5",
+    "redux-persist": "^6.0.0",
     "roughjs": "^4.6.6",
     "sockjs-client": "^1.6.1",
     "tailwindcss": "^4.1.18",
